fix Java 1.8 deploy